--- a/zoom-with-scroll.html
+++ b/zoom-with-scroll.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>Test</title>
 </head>
 
@@ -16,5 +16,5 @@
     <div class="afterzoom">
         <p>This should appear after the above element is fully zoomed.</p>
     </div>
-    <script src="app2.js"></script>
+    <!-- <script src="app2.js"></script> -->
 </body>
