--- a/addShapes.html
+++ b/addShapes.html
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="addShapes.css">
   <title>Test</title>
-  <script src="addPicture.js" defer></script>
+  <script src="addShapes.js" defer></script>
 </head>
 <body> 
   <div class="container">
@@ -68,11 +68,13 @@
       <div class="row buttons">
           <button class="clear-canvas">Clear Canvas</button>
           <button class="save-img">Save As Image</button>
+          <button class="change-background">Change Background</button>
       </div>
     </section>
     <section class="drawing-board">
         <canvas></canvas>
     </section>
   </div>
+
 </body>
 </html>
