--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="addShapes.css">
-  <title>Test</title>
+  <title>Shapes</title>
   <script src="addShapes.js" defer></script>
 </head>
 <body> 
@@ -15,24 +15,24 @@
         <label for="" class="title">shapes</label>
         <ul class="options">
           <li class="option tool" id="rectangle">
-            <img src="icons/rectangle.svg" alt="">
-            <span>Rectangle</span>
+            <img src="../../icons/rectangle.svg" alt="">
+            <!-- <span>Rectangle</span> -->
           </li>
           <li class="option tool" id="circle">
-            <img src="icons/circle.svg" alt="">
-            <span>Circle</span>
+            <img src="../../icons/circle.svg" alt="">
+            <!-- <span>Circle</span> -->
           </li>
           <li class="option tool" id="triangle">
-            <img src="icons/triangle.svg" alt="">
-            <span>Triangle</span>
+            <img src="../../icons/triangle.svg" alt="">
+            <!-- <span>Triangle</span> -->
           </li>
           <li class="option tool" id="line">
-            <img src="icons/line.svg" alt="">
-            <span>Line</span>
+            <img src="../../icons/line.svg" alt="">
+            <!-- <span>Line</span> -->
           </li>
           <li class="option">
             <input type="checkbox" id="fill-color">
-            <label for="fill-color">Fill color</label>
+            <label for="fill-color">Fill</label>
           </li>
         </ul>
       </div>
@@ -40,12 +40,16 @@
         <label for="" class="title">Options</label>
         <ul class="options">
           <li class="option active tool" id="brush">
-            <img src="icons/brush.svg" alt="">
-            <span>Brush</span>
+            <img src="../../icons/brush.svg" alt="">
+            <!-- <span>Brush</span> -->
+          </li>
+          <li class="option active tool" id="marker">
+            <img src="../../icons/marker.svg" alt="">
+            <!-- <span>Brush</span> -->
           </li>
           <li class="option tool" id="eraser">
-            <img src="icons/eraser.svg" alt="">
-            <span>Eraser</span>
+            <img src="../../icons/eraser.svg" alt="">
+            <!-- <span>Eraser</span> -->
           </li>
     
           <li class="option">
@@ -68,7 +72,12 @@
       <div class="row buttons">
           <button class="clear-canvas">Clear Canvas</button>
           <button class="save-img">Save As Image</button>
-          <button class="change-background">Change Background</button>
+          <button class="undo">Undo</button>
+          <button class="move-item">
+            <img src="../../icons/hand.svg" alt="">
+          </button>
+          <button class="draw-again">Draw</button>
+
       </div>
     </section>
     <section class="drawing-board">
